--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
+    "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
