--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "dev": "node server.js",
-    "watch": "webpack --progress --color --watch"
+    "dev": "node server.js"
   },
   "dependencies": {
     "deku": "^2.0.0-rc16",
@@ -14,6 +13,7 @@
     "babel-preset-es2015": "^6.9.0",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
+    "html-webpack-plugin": "^2.18.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
