--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.18.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
