--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "deku": "^2.0.0-rc16",
+    "history": "^3.0.0",
     "redux": "^3.5.2"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.18.0",
+    "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
